--- a/nahid_short_cv.tex
+++ b/nahid_short_cv.tex
@@ -63,7 +63,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\namesection{Mohammad Nahid}{Hossain}{{144, East Kazipara, Kafrul, Dhaka-1216, Bangladesh}\\
+\namesection{Mohammad Nahid}{Hossain}{{Bounia, Vadalodi, Uttara, Dhaka-1229}\\
 	%{Permanent Add: Vill: Shitarampur, Post: Shitarampur (8131), Upazilla: Kashiani, Dist: Gopalganj} \\
 \href{mailto:nahid.ebrahim18@gmail.com}{nahid.ebrahim18@gmail.com} | +8801689905382\\
  \urlstyle{same}\url{http://mohammad-nahid-hossain.github.io/}
@@ -184,7 +184,7 @@ Digital Image Processing \\
 Python \textbullet{}   Java \textbullet{} C++ \textbullet{} JavaScript \\
 PHP \textbullet{} MySQL \textbullet{} \LaTeX\ \\ 
 \subsection{Development Tool}
-Android Studio \textbullet{} Hadoop \textbullet{} Weka\\ Matlab \textbullet{} Unity 3D \\
+Android Studio \textbullet{} Hadoop \textbullet{} Weka\\ Matlab \\
 \subsection{Deep Learning Library}
 Tensorflow \textbullet{} Keras \textbullet{} Pytorch
 \sectionsep
@@ -211,7 +211,10 @@ Professional Member, ACM \\
 \end{minipage} 
 \hfill
 \begin{minipage}[t]{0.66\textwidth} 
-	
+
+\section{Objective}
+To setup my career as researcher and developer especially on data science and work with a progressive organization, with looking forward to overall growth of itself and its supporting elements ensuring a wonderful environment for all level of employees to overcome challenges.
+\sectionsep	
 	
 \section{Experience}
 
@@ -220,7 +223,7 @@ Professional Member, ACM \\
 \location{January 2018 - Present | Mirpur, Dhaka}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightemize}
-	%\item Coordinator, HEAP Programming Club
+	\item Mentor, HEAP Programming Club
 	%\item Mentor, IEEE ISTT Student Branch
 	\item Faculty Member, ISTT ACM Student Chapter
 \end{tightemize}
@@ -299,10 +302,21 @@ Professional Member, ACM \\
 %\sectionsep
 %
 
+\section{Major Projects}
+\runsubsection{Route Tracker using GPS Technology}\\
+It shows the optimal route from source to destination based on traffic analysis also it shows the current condition of traffic.\\
+\sectionsep
+\runsubsection{Tic-tac-toe game solutions (Supervised Learning)}\\
+I have applied different machine learning algorithms on the "UCI Tic-tac- toe set" and reviewed it by confusion matrix and ROC curve.\\
+\sectionsep
+\runsubsection{Cereal Dataset (Unsupervised Learning)}\\
+I have applied Agglomerative Hierarchical Clustering Algorithm on the Cereal Data set and have done some analysis on it.\\
+\sectionsep
+
 \section{Education}
 \subsection{American International University of Bangladesh (AIUB)}
 \descript{B.Sc (Engg.) in Computer Science \& Engineering}
-\location{January 2017 | Dhaka, Bangladesh \\ CGPA: 3.80 \\ Thesis: Study on Bangla Machine Translation Technique using Long Short Term Memory (LSTM)}
+\location{April 2017 | Dhaka, Bangladesh \\ CGPA: 3.78 \\ Thesis:  A Routing Protocol with Energy Harvesting Model for Wireless Nano Sensors in Cancer Cell Detection}
 \sectionsep	
 
 
@@ -342,20 +356,31 @@ Professional Member, ACM \\
 %     AWARDS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+%\section{Awards} 
+%%\subsection{Awards}
+%\begin{tabular}{rll}
+%	2018 & Nvidia GPU Grant & Nvidia \\
+%
+%2016     & Champion & NASA Space Apps Challenge 2016 \\
+% 2016     & Best Young Innovator & BSMRSTU Youth Summit 2016 \\
+% 2016     & Champion & Dhaka Divisional Science \& Technology Fair\\
+% 2016	     & Best Young Inventor  & Digital Innovation Fair 2016\\
+% 2015	     & Champion  & CSE IT Carnival, BSMRSTU, 2015\\
+% & Project Showcasing(Mobile Apps) & \\
+% 2015	     & Top 200  & Young Bangla Youth Award 2015\\
+% 2014	     & Champion  & International Contest on Programming and\\
+% & & System Development 2014\\
+%
+%\end{tabular}
+%\sectionsep
+
 \section{Awards} 
 %\subsection{Awards}
-\begin{tabular}{rll}
-	2018 & Nvidia GPU Grant & Nvidia \\
-
-2016     & Champion & NASA Space Apps Challenge 2016 \\
- 2016     & Best Young Innovator & BSMRSTU Youth Summit 2016 \\
- 2016     & Champion & Dhaka Divisional Science \& Technology Fair\\
- 2016	     & Best Young Inventor  & Digital Innovation Fair 2016\\
- 2015	     & Champion  & CSE IT Carnival, BSMRSTU, 2015\\
- & Project Showcasing(Mobile Apps) & \\
- 2015	     & Top 200  & Young Bangla Youth Award 2015\\
- 2014	     & Champion  & International Contest on Programming and\\
- & & System Development 2014\\
+\begin{tabular}{rl}
+2013 & Cisco Basic Networking Certificate from Cisco, netcad \\
+	     & through American International University-Bangladesh (AIUB)\\
+2014     & 10th in AIUB Junior Programming Contest  \\
+2015     & Hackathon \& Volunteer Activists during Bachelor Degree \\
 
 \end{tabular}
 \sectionsep
@@ -372,12 +397,11 @@ Professional Member, ACM \\
 \section{Reference} 
 
 \begin{tabular}{ll}
-Dr. Md. Hanif Seddiqui    & Md. Jamal Uddin\\
+Dr. Tabin Hasan    & Mohammad Asifur Rahman\\
 Professor   & Assistant Professor\\
-University of Chittagong  & Bangabandhu Sheikh Mujibur Rahman \\
-& Science \& Technology University\\
-hanif@cu.ac.bd   & jamal.bsmrstu@gmail.com\\
-+8801933236173 &+8801734531900\\
+American International University- & American International University-\\
+Bangladesh (AIUB)& Bangladesh (AIUB)\\
+tabin@aiub.edu   & asifur.rahman@aiub.edu\\
 \end{tabular}
 \sectionsep
 
