edited education section

--- a/nahid_short_cv.tex
+++ b/nahid_short_cv.tex
@@ -315,7 +315,7 @@ I have applied Agglomerative Hierarchical Clustering Algorithm on the Cereal Dat
 
 \section{Education}
 \subsection{American International University of Bangladesh (AIUB)}
-\descript{B.Sc (Engg.) in Computer Science \& Engineering}
+\descript{B.Sc in Computer Science \& Engineering}
 \location{April 2017 | Dhaka, Bangladesh \\ CGPA: 3.78 \\ Thesis:  A Routing Protocol with Energy Harvesting Model for Wireless Nano Sensors in Cancer Cell Detection}
 \sectionsep	
 
